[workspace]
members = ["firmware", "gateway", "canisters/src/vts", "gateway-tcp"]
default-members = ["firmware", "gateway", "canisters/src/vts", "gateway-tcp"]
resolver = "2"

[workspace.dependencies]
ic-agent = { version = "0.36.0", features = [], default-features = true }
serde = { version = "1.0.203", features = [], default-features = false }
candid = { version = "0.10.9", features = [], default-features = false }
k256 = { version = "0.13.3", features = ["ecdsa", "pkcs8"], default-features = false }
serde_json = { version = "1.0.120", features = [], default-features = false }
rand = { version = "0.8.5", features = [], default-features = false }
bincode = { version = "2.0.0-rc.3", features = [], default-features = true }
hex = { version = "0.4.3", features = [], default-features = false }
