[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
vts = { path = "../canisters/src/vts", features = [], default-features = false }
log = { version = "0.4.21", features = [], default-features = false }
env_logger = { version = "0.11.3", features = ["auto-color", "humantime"], default-features = false }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"], default-features = false }
serde = { version = "1.0.200", features = [], default-features = false }
serde_json = { version = "1.0.116", features = [], default-features = false }
ic-agent = { version = "0.34.0", features = [], default-features = true }
candid = { version = "0.10.7", features = [], default-features = false }
k256 = { version = "0.13.3", features = [], default-features = false }
rand = { version = "0.8.5", features = [], default-features = false }
zip = { version = "1.1.3", features = [], default-features = false }
