[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
vts = { path = "../canisters/src/vts", features = [], default-features = false }
ic-agent = { workspace = true }
serde = { workspace = true }
candid = { workspace = true }
k256 = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
log = { version = "0.4.21", features = [], default-features = false }
env_logger = { version = "0.11.3", features = ["auto-color", "humantime"], default-features = false }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"], default-features = false }
zip = { version = "2.1.3", features = [], default-features = false }
