[package]
name = "vts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
candid = { version = "0.10.8", features = [], default-features = false }
ic-cdk = { version = "0.14.0", features = [], default-features = false }
ic-stable-structures = { version = "0.6.4", features = [], default-features = false }
serde = { version = "1.0.203", features = [], default-features = false }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"], default-features = false }
ic-agent = { version = "0.36.0", features = [], default-features = true }
serde_json = { version = "1.0.117", features = [], default-features = false }
