[package]
name = "vts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
clean_state = []

[dependencies]
serde = { workspace = true }
candid = { workspace = true }
ic-cdk = { version = "0.14.0", features = [], default-features = false }
ic-stable-structures = { version = "0.6.4", features = [], default-features = false }

[dev-dependencies]
ic-agent = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"], default-features = false }
