[package]
name = "vts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
clean_state = []
predefined_telemetry = []

[dependencies]
serde = { workspace = true }
candid = { workspace = true }
k256 = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
ic-cdk = { version = "0.14.0", features = [], default-features = false }
ic-stable-structures = { version = "0.6.5", features = [], default-features = false }
time = { version = "0.3.36", features = [], default-features = false }
ic-cdk-timers = { version = "0.8.0", features = [], default-features = false }
rust_decimal = { version = "1.35", features = [], default-features = false }

[dev-dependencies]
ic-agent = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"], default-features = false }
